# FunRobo2016

./: .gitmodules  README.md  gps_data.txt
Arduino/hindbrain/: hindbrain.ino
Arduino/rosserial_testing/: rosserial_testing.ino
ROS/mystery_machine/: CMakeLists.txt  package.xml
ROS/mystery_machine/launch/: .#race1-3.launch  data_log.launch  lidar_following.launch  race1-3.launch  teleop.launch
ROS/mystery_machine/scripts/: 99-usb-serial.rules  arbiter.py  lidar_following.sh  port_setup.sh  race1-3.sh  sensor_data_log.sh  teleop_mode.sh
ROS/mystery_machine/src/: #forebrain.cpp#  .color_detect.cpp.swp  .forebrain.cpp.swp  camera_subscriber.cpp  color_detect.cpp  cone_detection.cpp  cone_detection.cpp~  factor.cpp  forebrain.cpp  grass_detection.cpp  midbrain.cpp  race_goals.txt  waypoint_follower.cpp
